# STA663L-waiver

./: README.md
wavier/Project1/: logistic_regression_start_code.py  real_estate.py  sgd_start_code.py  softmax_regression_start_code.py
wavier/Project2/ml2024_hw2/code/: adult_classification.py  boosting.py  tree.py
wavier/Project4/: MLP.py  __init__.py  cnn.py  main.py  vit.py
wavier/advanced_ml_pipeline/: .gitignore  Dockerfile  Makefile  PROJECT_OVERVIEW.md  README.md  USAGE.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  simple_run.py
wavier/advanced_ml_pipeline/configs/: config.yaml
wavier/advanced_ml_pipeline/src/: __init__.py  main.py
wavier/advanced_ml_pipeline/src/data/: loaders.py
wavier/advanced_ml_pipeline/src/features/: engineering.py
wavier/advanced_ml_pipeline/src/inference/: api.py
wavier/advanced_ml_pipeline/src/models/: architectures.py  trainer.py
wavier/advanced_ml_pipeline/src/utils/: config.py  logging.py
wavier/advanced_ml_pipeline/tests/: test_pipeline.py
wavier/project3-policy_gradient/: policy_gradient.py  requirements.txt
wavier/project3-sarsa_Q_learning/: algorithms.py  main.py  utils.py
